# solsphere-Assignment

./: readme.md
admin-dashboard/: .gitignore  package-lock.json  package.json
admin-dashboard/src/: App.tsx  api.ts
admin-dashboard/src/components/: MachineTable.tsx
system_utility_backend/: .gitignore  main.py
system_utility_project/: .gitignore  pyproject.toml  requirements.txt
system_utility_project/system_utility/: daemon.py  main.py  reporter.py  utils.py
system_utility_project/system_utility/checks/: common.py  linux.py  macos.py  windows.py
